--- a/portafolio/indice.html
+++ b/portafolio/indice.html
@@ -1,20 +1,47 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Mi Sitio</title>
+<title>Ultimos proyectos</title>
 </head>
  
 <body>
+
+<a name=arriba> </a>
+<h1>Proyectos</h1>
+<p><a href=#fondo>Ir al fondo</a></p>
  
-<p><a href="../index.html" title="Página principal de Mi Sitio">Volver a la pagina principal</a></p>
- 
-<h1>Ultimos proyectos</h1>
- 
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec iaculis posuere justo. Nam vel neque.</p>
+<p>La gesti&oacute;n de proyectos es la aplicaci&oacute;n de conocimientos, habilidades, herramientas y t&eacute;cnicas a las actividades de un proyecto para satisfacer los requisitos del mismo. Consiste en reunir varias ideas para llevarlas a cabo, y es un emprendimiento que tiene lugar durante un tiempo limitado, y que apunta a lograr un resultado &uacute;nico. Surge como respuesta a una necesidad, acorde con la visi&oacute;n de la organizaci&oacute;n, aunque &eacute;sta puede desviarse en funci&oacute;n del inter&eacute;s. El proyecto finaliza cuando se obtiene el resultado deseado, y se puede decir que colapsa cuando desaparece la necesidad inicial o se agotan los recursos disponibles.</p>
  
 <h3>Proyecto 1</h3>
  
-<p>Etiam consectetuer, mauris vitae cursus scelerisque, dui turpis dignissim justo, et euismod enim odio sit amet erat.</p>
+<p>Las personas pueden establecer metas personales. Un estudiante puede establecer un objetivo de una calificaci&oacute;n alta en un examen. Un atleta puede establecerse la meta de correr cinco millas al d&iacute;a. Un viajero podr&iacute;a tratar de llegar a una ciudad de destino dentro de tres horas. Las metas financieras son un ejemplo com&uacute;n, para ahorrar para la jubilaci&oacute;n o para ahorrar para una compra.
+El manejo de las metas puede dar vueltas en todos los ámbitos de la vida personal. Saber exactamente lo que se quiere lograr deja claro en qu&eacute; se necesita concentrarse y mejorar y muchas veces prioriza subconscientemente esa meta.
+La fijaci&oacute;n de metas y la planificaci&oacute;n <em>("metas de trabajo")</em> promueve la visi&oacute;n de largo plazo y la motivaci&oacute;n a corto plazo. Se focaliza en la intenci&oacute;n, el deseo, la adquisici&oacute;n de conocimientos y ayuda a organizar los recursos.
+Las metas de trabajo eficientes incluyen reconocer y resolver toda culpa, cualquier conflicto interno o creencia limitada que podr&iacute;a causar una sabotaje de los esfuerzos de uno. Al establecer metas claramente definidas, uno posteriormente puede medir y tomar orgullo en el logro de &eacute;sas metas. Uno puede ver el progreso en lo que podr&iacute;a haber sido una larga y tal vez dif&iacute;cil rutina.
+El logro de metas personales
+El logro de las metas complejas y dif&iacute;ciles requiere atenci&oacute;n, diligencia a largo plazo y esfuerzo. El &eacute;xito en cualquier campo requiere excusas y justificaciones anteriores por el mal desempeño o falta de planificaci&oacute;n adecuada; en breve, el &eacute;xito requiere de madurez emocional. La medida de la creencia que la gente tiene en su capacidad para lograr una meta personal tambi&eacute;n afecta a ese logro.
+Los logros a largo plazo se basan en los logros a corto plazo. El control Emocional en los pequeños momentos de cada d&iacute;a hace una gran diferencia en el largo plazo.
+El logro de metas personales y la felicidad[editar]
+Ha habido una gran cantidad de investigaciones llevadas a cabo mirando el vínculo entre el logro de los objetivos deseados, los cambios en la auto-eficacia y la integridad y finalmente los cambios de bienestar subjetivos.3 La eficacia de la meta se refiere a la probabilidad que tiene un individuo para poder tener éxito en el logro de su meta. La integridad de la meta se refiere a cómo los objetivos de una persona consistente son los aspectos centrales del mismo. Las investigaciones han demostrado que un enfoque en la eficacia de la meta está asociada con el bienestar y la felicidad de los factores (bienestar subjetivo) y la integridad de la meta se asocia con el factor de bienestar que significa (psicología).4 Múltiples estudios han demostrado la relación entre el logro de los objetivos a largo plazo y los cambios en el bienestar subjetivo; la mayoría de las investigaciones muestran que el logro de los objetivos que tienen un significado personal aumenta la sensación de bienestar subjetivo de la persona.5 6 7
+Modelo para la concordancia
+Fijación de metas
+La fijación de metas puede implicar el establecimiento de objetivos específicos, medibles, alcanzables, relevantes y limitados en el tiempo, mediante el criterio (SMART) pero no todos los investigadores están de acuerdo en que éstos criterios SMART son necesarios.1
+La investigación sobre la fijación de metas por Edwin A. Locke y sus colegas sugiere que la fijación de metas sirve como una herramienta eficaz para avanzar cuando se asegura que los miembros del grupo tienen una conciencia clara de lo que cada uno debe hacer para lograr un objetivo común. A nivel personal, el proceso de fijación de metas permite a los individuos especificar y luego trabajar hacia sus propios objetivos (como metas financieras o basadas en la carrera que se estudia). La fijación de metas comprende un componente importante de la gestión y del desarrollo personal.
+Las metas pueden ser a largo, intermedio o corto plazo. La principal diferencia es el tiempo necesario para alcanzarlos.
+Metas a corto plazo[editar]
+Las metas a corto plazo, esperan logros en un corto período de tiempo, como tratando de obtener una factura pagada en los próximos días. La definición de un objetivo a corto plazo no se refiere a un período de tiempo específico. En otras palabras, se puede lograr (o no lograr) un objetivo a corto plazo en un día, semana, mes, año, etc. El marco temporal para un objetivo a corto plazo se refiere a su contexto en la línea de tiempo general en el que se está aplicando. Por ejemplo, se podría medir una meta a corto plazo para un proyecto de un mes de duración en días; mientras que uno podría medir una meta a corto plazo para toda la vida de alguien en meses o años. Los planificadores suelen definir metas a corto plazo en relación con los objetivos a largo plazo.</p>
+
+
+<p>El modelo de auto-concordancia es un modelo que se ve en la secuencia de pasos que se dan a partir del inicio de una meta para alcanzarla.8 Se observa la probabilidad y el impacto de la consecución de objetivos en función del tipo de objetivo y el significado de la meta para el individuo. Los diferentes tipos de objetivos impactan el logro de la meta y el sentido de bienestar subjetivoprovocado por el logro de la meta. El modelo descompone factores que promueven, en primer lugar, que se esfuerzan por alcanzar una meta, después el logro de un objetivo, y luego los factores que conectan el logro de metas a los cambios en el bienestar subjetivo.
+Metas autónomos concordantes[editar]
+Las metas que se persiguen para cumplir los valores intrínsecos o para apoyar el autoconcepto de un individuo se llaman metas auto-concordantes. Las metas autónomas concordantes satisfacen las necesidades básicas y están alineados con lo que el psicoanalista Donald Winnicott llama el "verdadero yo" de un individuo. Debido a que éstas metas tienen un significado personal a un individuo y reflejan la identidad de un individuo, las metas de auto-concordantes tienen más probabilidades de recibir un esfuerzo sostenido en el tiempo. Por el contrario, las metas que no reflejan la identidad de un individuo y son perseguidos debido a factores externos (por ejemplo, las presiones sociales) surgirán de una región no integrada de una persona y por lo tanto son más propensas a ser abandonadas cuando se producen obstáculos.9 " Aquellos que alcanzan metas auto-concordantes obtienen mayores beneficios de bienestar de su consecución. Los efectos de bienestar del logro están mediados por la satisfacción de necesidades, es decir, las experiencias basadas en la actividad cotidiana de la autonomía, la competencia, y la relación que se acumula durante el período del esfuerzo. El modelo se muestra para proporcionar un ajuste satisfactorio para los 3 conjuntos de datos longitudinales y ser independiente de los efectos de laautoeficacia, las intenciones de implementación, el encuadre de evitación y las habilidades para la vida."10 Por otra parte, la teoría de la autodeterminación y la investigación en torno a esta teoría muestra que si un individuo logra efectivamente una meta pero ésa meta no es auto-endosada o auto-concordante, los niveles de bienestar no cambian a pesar de la consecución de los objetivos.11
+Tipos de metas[editar]
+Metas de dominio[editar]
+El objetivo principal de esta meta es mejorar y aprender nuevas cosas para el dominio a toda costa. Es una meta que favorece en gran medida a los estudiantes debido a que con ello se comprometen muchos más, lo que mejora su calidad de participación.
+Metas de desempeño[editar]
+El principal objetivo es mostrar las habilidades que uno tiene a los demás. Un ejemplo en el caso de los estudiantes, sería obtener buenas calificaciones en los exámenes para superar a los demás (aprendices centrados en el yo)</p>
+
+<a href=#arriba>Ir arriba</a> <a href="proyecto1.html"> Ver la tabla</a>
  
 <p><a href="../imagenes/proyecto1.png" title="Imagen del Proyecto 1">Ver imagen del Proyecto 1</a></p>
  
@@ -23,7 +50,11 @@
 <p>Etiam consectetuer, mauris vitae cursus scelerisque, dui turpis dignissim justo, et euismod enim odio sit amet erat.</p>
  
 <p><a href="../imagenes/proyecto2.png" title="Imagen del Proyecto 2">Ver imagen del Proyecto 2</a></p>
- 
+
+<!--Regresando al Index--> 
+<p><a href="../index.html" title="Regresar">Volver al Index</a></p>
+
+<a name=fondo> </a>
 </body>
  
 </html>
