--- a/portafolio/proyecto1.html
+++ b/portafolio/proyecto1.html
@@ -4,18 +4,22 @@
 </head>
 <body>
 	<table border=2>
+		<!--Esta es la fila 1-->
 		<tr>
 			<td>Proyecto</td>
 			<td>Encargado</td>		
 		</tr>
+		<!--Esta es la fila 2-->
 		<tr>
 			<td>1</td>
 			<td>Jose</td>
 		</tr>
+		<!--Esta es la fila 3-->
 		<tr>
 			<td>2</td>
 			<td>Susana</td>
 		</tr>
 	</table>
+	<p><a href="indice.html">Volviendo a elegir Proyectos</a></p>
 </body>
 </html>
